Changed Tester file to match group