@@ -1,113 +1,177 @@
-import static org.junit.Assert.*;  //Imports assert method
-
+import static org.junit.Assert.*;
+import java.nio.file.Path;
+import org.junit.*;
 import java.nio.file.Files;
 import java.util.*;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.io.IOException;
 
 
-import org.junit.*; //Imports jUnit for compiler to understand the tests
-public class MarkdownParseTest { //Creates a class to create tests
-
-    ArrayList<String> expectedLinks1, expectedLinks2,expectedLinks3, 
-        expectedLinks4;
+public class MarkdownParseTest {
+    ArrayList<String> expectedlinks; //ArrayList utilized by tests 1, 2, 3, and 4
 
     @Before
     public void setup() {
-        expectedLinks1 = new ArrayList<>();
-        expectedLinks1.add("https://something.com");
-        expectedLinks1.add("some-thing.html");
-        //expectedLinks1.add("some-thing.html");
-
-        expectedLinks2 = new ArrayList<>();
-        expectedLinks2.add("https://docs.google.com/document/d/1SsTgAC8as-WSS_SGnABkZZerY4Zc9zf-FFgJSPd9v6U/edit#");
-        expectedLinks2.add("https://www.youtube.com/watch?v=dQw4w9WgXcQ");
-        expectedLinks2.add("https://theuselessweb.com/");
-        expectedLinks2.add("https://en.wikipedia.org/wiki/4th_Army_(Kingdom_of_Yugoslavia)");
-
-        expectedLinks3 = new ArrayList<>(); 
-        expectedLinks3.add("https://something.com");
-        expectedLinks3.add("some-thing.html");
-
-        expectedLinks4 = new ArrayList<>();
-    }
-
-    @Test                       //Lets compiler know that this is a jUnit test
-    public void addition() {    //Method to test an addition problem
-        assertEquals(2, 1 + 1); //Checks if the actual result (right) matches the expected result (left)
-    }
-
-    @Test                       
-    public void multiplicationFail() {
-        assertEquals(8, 2 * 2); 
+        //Populate array with desired output
+        expectedlinks = new ArrayList<>();
+        expectedlinks.add("https://something.com");
+        expectedlinks.add("some-thing.html");
     }
 
     @Test
-    public void testGetLinks1() throws IOException {
-        Path fileName = Paths.get("test-file.md");
-        try {
-            String content = Files.readString(fileName); 
-            ArrayList<String> links = MarkdownParse.getLinks(content);
-
-            for (int i = 0; i < links.size(); i++)
-            {
-                assertEquals(expectedLinks1.get(i), links.get(i));
-            }
-        } catch (IOException e) {
-            System.out.println("Exception thrown");
-        }
+    public void addition() {
+        assertEquals(2, 1 + 1);
     }
 
+    /*
+    / Test markdown file w/ two links present
+    */
     @Test
-    public void testGetLinks2() throws IOException {
-        Path fileName = Paths.get("test-file2.md");
-        try {
-            String content = Files.readString(fileName); 
-            ArrayList<String> links = MarkdownParse.getLinks(content);
+    public void testMarkdownParseFile1() {
+        Path filePath = Path.of("test-file1.md");
 
-            for (int i = 0; i < links.size(); i++)
-            {
-                assertEquals(expectedLinks2.get(i), links.get(i));
+        try {
+            String fileContents = Files.readString(filePath);
+            ArrayList<String> parsedLinks = MarkdownParse.getLinks(fileContents);
+
+            for (int i = 0; i < parsedLinks.size(); ++i) {
+                assertEquals(expectedlinks.get(i), parsedLinks.get(i));
             }
-        } catch (IOException e) {
-            System.out.println("Exception thrown");
+        } catch (Exception e) {
+            System.out.println("Error: file not found!");
         }
+
     }
 
+    /*
+    / Test markdown file w/ two links and an image present
+    */
     @Test
-    public void testGetLinks3() throws IOException {
-        Path fileName = Paths.get("test-file3.md");
-        try {
-            String content = Files.readString(fileName); 
-            ArrayList<String> links = MarkdownParse.getLinks(content);
+    public void testMarkdownParseFile2() {
+        Path filePath = Path.of("test-file2.md");
 
-            for (int i = 0; i < links.size(); i++)
-            {
-                assertEquals(expectedLinks3.get(i), links.get(i));
+        try {
+            String fileContents = Files.readString(filePath);
+            ArrayList<String> parsedLinks = MarkdownParse.getLinks(fileContents);
+
+            for (int i = 0; i < parsedLinks.size(); ++i) {
+                assertEquals(expectedlinks.get(i), parsedLinks.get(i));
             }
-        } catch (IOException e) {
-            System.out.println("Exception thrown");
+        } catch (Exception e) {
+            System.out.println("Error: file not found!");
         }
+
     }
 
+    /*
+    / Test markdown file w/ two links, an image present, and no title
+    */
     @Test
-    public void testGetLinks4() throws IOException {
-        Path fileName = Paths.get("test-file4.md");
-        try {
-            String content = Files.readString(fileName); 
-            ArrayList<String> links = MarkdownParse.getLinks(content);
+    public void testMarkdownParseFile3() {
+        Path filePath = Path.of("test-file2.md");
 
-            for (int i = 0; i < links.size(); i++)
-            {
-                assertEquals(expectedLinks4.get(i), links.get(i));
+        try {
+            String fileContents = Files.readString(filePath);
+            ArrayList<String> parsedLinks = MarkdownParse.getLinks(fileContents);
+
+            for (int i = 0; i < parsedLinks.size(); ++i) {
+                assertEquals(expectedlinks.get(i), parsedLinks.get(i));
             }
-        } catch (IOException e) {
-            System.out.println("Exception thrown");
+        } catch (Exception e) {
+            System.out.println("Error: file not found!");
         }
+
     }
 
+    /*
+    / Test markdown file w/ two links and an image present, with extra space at the end
+    */
+    @Test
+    public void testMarkdownParseFile4() {
+        Path filePath = Path.of("test-file4.md");
+
+        try {
+            String fileContents = Files.readString(filePath);
+            ArrayList<String> parsedLinks = MarkdownParse.getLinks(fileContents);
+
+            for (int i = 0; i < parsedLinks.size(); ++i) {
+                System.out.println(parsedLinks.get(i));
+                assertEquals(expectedlinks.get(i), parsedLinks.get(i));
+            }
+        } catch (Exception e) {
+            System.out.println("Error: file not found!");
+        }
+
+    }
+
+    /*
+    / Test markdown file w/ no links present
+    */
+    @Test
+    public void testMarkdownParseFile5() {
+        Path filePath = Path.of("test-file5.md");
+
+        try {
+            String fileContents = Files.readString(filePath);
+            ArrayList<String> parsedLinks = MarkdownParse.getLinks(fileContents);
+
+            assertEquals(0, parsedLinks.size());
+        } catch (Exception e) {
+            System.out.println("Error: file not found!");
+        }
+
+    }
+
+    /*
+    / Test markdown file w/ no links present, but empty brackets are present
+    */
+    @Test
+    public void testMarkdownParseFile6() {
+        Path filePath = Path.of("test-file6.md");
+
+        try {
+            String fileContents = Files.readString(filePath);
+            ArrayList<String> parsedLinks = MarkdownParse.getLinks(fileContents);
+
+            assertEquals(0, parsedLinks.size());
+        } catch (Exception e) {
+            System.out.println("Error: file not found!");
+        }
+
+    }
+
+    /*
+    / Test markdown file w/ no links present, but lines that look like links
+    */
+    @Test
+    public void testMarkdownParseFile7() {
+        Path filePath = Path.of("test-file7.md");
+
+        try {
+            String fileContents = Files.readString(filePath);
+            ArrayList<String> parsedLinks = MarkdownParse.getLinks(fileContents);
+
+            assertEquals(0, parsedLinks.size());
+        } catch (Exception e) {
+            System.out.println("Error: file not found!");
+        }
+
+    }
+
+    /*
+    / Test markdown file w/ only ")[" present, not a link
+    */
+    @Test
+    public void testMarkdownParseFile8() {
+        Path filePath = Path.of("test-file8.md");
+
+        try {
+            String fileContents = Files.readString(filePath);
+            ArrayList<String> parsedLinks = MarkdownParse.getLinks(fileContents);
+
+            assertEquals(0, parsedLinks.size());
+        } catch (Exception e) {
+            System.out.println("Error: file not found!");
+        }
+
+    }
 
 }
-
-
